--- a/blue-green-deployment/Jenkinsfile
+++ b/blue-green-deployment/Jenkinsfile
@@ -13,7 +13,7 @@ pipeline {
     stages {
         stage('Clone Repository') {
             steps {
-                git url: 'https://github.com/Steve-ndeke/blue-green_poc/tree/main/blue-green-deployment', credentialsId: 'github-pat'
+                git url: 'https://github.com/Steve-ndeke/blue-green_poc/tree/main/blue-green-deployment', credentialsId: 'Steve-ndeke/******'
             }
         } 
 
