updated  the chart path

--- a/blue-green-deployment/Jenkinsfile
+++ b/blue-green-deployment/Jenkinsfile
@@ -5,6 +5,7 @@ pipeline {
         GITHUB_TOKEN = credentials('PAT-jenkins')
         K8S_NAMESPACE = 'blue-green'
         HELM_RELEASE_NAME= 'blue-green-deployment'
+        CHART_PATH= '/blue-green-deployment/'
     }
 
     // parameters {
