--- a/blue-green-deployment/Jenkinsfile
+++ b/blue-green-deployment/Jenkinsfile
@@ -16,6 +16,14 @@ pipeline {
             }
         }
 
+        stage('Configure Kubernetes') {
+            steps {
+                withCredentials([file(credentialsId: 'kubeconfig', variable: 'KUBECONFIG')]) {
+                    sh 'kubectl config view'
+                }
+            }
+        }
+
         stage('Install Helm') {
             steps {
                 script {
