commented the k8s config stage

--- a/blue-green-deployment/Jenkinsfile
+++ b/blue-green-deployment/Jenkinsfile
@@ -16,13 +16,13 @@ pipeline {
             }
         }
 
-        stage('Configure Kubernetes') {
-            steps {
-                withCredentials([file(credentialsId: 'kubeconfig', variable: 'KUBECONFIG')]) {
-                    sh 'kubectl config view'
-                }
-            }
-        }
+        // stage('Configure Kubernetes') {
+        //     steps {
+        //         withCredentials([file(credentialsId: 'kubeconfig', variable: 'KUBECONFIG')]) {
+        //             sh 'kubectl config view'
+        //         }
+        //     }
+        // }
 
         stage('Install Helm') {
             steps {
