--- a/blue-green-deployment/Jenkinsfile
+++ b/blue-green-deployment/Jenkinsfile
@@ -18,7 +18,7 @@ pipeline {
 
         stage('Test Kubernetes Access') {
             steps {
-                withCredentials([file(credentialsId: 'kubeconfig', variable: 'KUBECONFIG')]) {
+                withCredentials([file(credentialsId: 'kubernetes_config', variable: 'KUBECONFIG')]) {
                     sh 'kubectl get nodes'
                 }
             }
