--- a/blue-green-deployment/Jenkinsfile
+++ b/blue-green-deployment/Jenkinsfile
@@ -8,11 +8,34 @@ pipeline {
         HELM_VERSION = 'v3.15.4'
         HELM_INSTALL_DIR = "${env.WORKSPACE}/helm"
         PATH = "${HELM_INSTALL_DIR}:${env.PATH}" 
+        KUBECTL_INSTALL_DIR = "$HOME/bin"
     }
     stages {
         stage('Clone Repository') {
             steps {
                 git branch: 'main', credentialsId: 'PAT-jenkins', url: 'https://github.com/Steve-ndeke/blue-green_poc'
+            }
+        }
+
+        stage('Check and Install kubectl') {
+            steps {
+                script {
+                    def kubectlExists = sh(script: 'which kubectl', returnStatus: true) == 0
+
+                    if (kubectlExists) {
+                        echo "kubectl is already installed."
+                    } else {
+                        echo "kubectl not found. Installing..."
+                        sh """
+                        mkdir -p ${KUBECTL_INSTALL_DIR}
+                        curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+                        chmod +x kubectl
+                        mv kubectl ${KUBECTL_INSTALL_DIR}/kubectl
+                        export PATH=${KUBECTL_INSTALL_DIR}:\$PATH
+                        """
+                        echo "kubectl installed successfully."
+                    }
+                }
             }
         }
 
