--- a/blue-green-deployment/Jenkinsfile
+++ b/blue-green-deployment/Jenkinsfile
@@ -13,7 +13,7 @@ pipeline {
     stages {
         stage('Clone Repository') {
             steps {
-                git branch: 'main', credentialsId: 'PAT-jenkins', url: 'https://github.com/Steve-ndeke/blue-green_poc'
+                git branch: 'main', credentialsId: 'PAT', url: 'https://github.com/Steve-ndeke/blue-green_poc'
             }
         }
         stage('Check and Install kubectl') {
