--- a/blue-green-deployment/Jenkinsfile
+++ b/blue-green-deployment/Jenkinsfile
@@ -18,13 +18,13 @@ pipeline {
         stage('Check and Install kubectl') {
             steps {
                 script {
-                    def kubectlExists = sh(script: 'which kubectl', returnStatus: true) == 0
+                    def kubectlExists = bat(script: 'which kubectl', returnStatus: true) == 0
 
                     if (kubectlExists) {
                         echo "kubectl is already installed."
                     } else {
                         echo "kubectl not found. Installing..."
-                        sh '''
+                        bat '''
                         mkdir -p ${KUBECTL_INSTALL_DIR}
                         curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
                         chmod +x kubectl
@@ -41,7 +41,7 @@ pipeline {
         stage('Test Kubernetes Access') {
             steps {
                 withCredentials([file(credentialsId: 'kubernetes_config', variable: 'KUBECONFIG')]) {
-                    sh 'kubectl get nodes'
+                    bat 'kubectl get nodes'
                 }
             }
         }
@@ -50,15 +50,15 @@ pipeline {
             steps {
                 script {
                     // Check if Helm is installed
-                    def helmExists = sh(script: 'which helm', returnStatus: true) == 0
+                    def helmExists = bat(script: 'which helm', returnStatus: true) == 0
 
                     if (helmExists) {
                         echo "Helm is already installed."
                     } else {
                         echo "Helm is not installed. Installing Helm..."
-                        sh """
+                        bat """
                         mkdir -p ${HELM_INSTALL_DIR}
-                        curl -L https://get.helm.sh/helm-${HELM_VERSION}-linux-amd64.tar.gz -o helm.tar.gz
+                        curl -L https://get.helm.bat/helm-${HELM_VERSION}-linux-amd64.tar.gz -o helm.tar.gz
                         tar -xvzf helm.tar.gz --strip-components=1 -C ${HELM_INSTALL_DIR} linux-amd64/helm
                         rm helm.tar.gz
                         """
@@ -79,13 +79,13 @@ pipeline {
 
 // Function definition outside the pipeline block
 def helmUpgradeOrInstall() {
-    def deploymentExists = sh(script: "helm list -n ${env.K8S_NAMESPACE} | grep ${env.HELM_RELEASE_NAME}", returnStatus: true) == 0
+    def deploymentExists = bat(script: "helm list -n ${env.K8S_NAMESPACE} | grep ${env.HELM_RELEASE_NAME}", returnStatus: true) == 0
 
     if (deploymentExists) {
         echo "Deployment exists. Upgrading..."
-        sh "helm upgrade ${env.HELM_RELEASE_NAME} ${env.CHART_PATH} -n ${env.K8S_NAMESPACE}"
+        bat "helm upgrade ${env.HELM_RELEASE_NAME} ${env.CHART_PATH} -n ${env.K8S_NAMESPACE}"
     } else {
         echo "Deployment does not exist. Installing..."
-        sh "helm install ${env.HELM_RELEASE_NAME} ${env.CHART_PATH} -n ${env.K8S_NAMESPACE} --create-namespace"
+        bat "helm install ${env.HELM_RELEASE_NAME} ${env.CHART_PATH} -n ${env.K8S_NAMESPACE} --create-namespace"
     }
 }
