--- a/blue-green-deployment/Jenkinsfile
+++ b/blue-green-deployment/Jenkinsfile
@@ -40,7 +40,7 @@ pipeline {
         stage('Test Kubernetes Access') {
             steps {
                 withCredentials([file(credentialsId: 'kubeconfig', variable: 'KUBECONFIG')]) {
-                    bat 'helm list'
+                    bat 'bat 'kubectl get nodes --kubeconfig %KUBECONFIG%''
                 }
             }
         }
