authenticating the jenkins with my local cluster

--- a/blue-green-deployment/Jenkinsfile
+++ b/blue-green-deployment/Jenkinsfile
@@ -10,31 +10,31 @@ pipeline {
         KUBECTL_INSTALL_DIR = "$HOME/bin"
     }
     stages {
-//         stage('Clone Repository') {
-//             steps {
-//                 git branch: 'main', url: 'https://github.com/Steve-ndeke/blue-green_poc.git'
-//             }
-//         }
-//         stage('Check and Install kubectl') {
-//             steps {
-//                 script {
-//                     def kubectlExists = bat(script: 'which kubectl', returnStatus: true) == 0
-//
-//                     if (kubectlExists) {
-//                         echo "kubectl is already installed."
-//                     } else {
-//                         echo "kubectl not found. Installing..."
-//                         bat '''
-//                         mkdir %KUBECTL_INSTALL_DIR%
-//                         curl -LO "https://dl.k8s.io/release/%cd%/kubectl.exe"
-//                         move kubectl.exe %KUBECTL_INSTALL_DIR%\\kubectl.exe
-//                         set PATH=%KUBECTL_INSTALL_DIR%;%PATH%
-//                         '''
-//                         echo "kubectl installed successfully."
-//                     }
-//                 }
-//             }
-//         }
+        stage('Clone Repository') {
+            steps {
+                git branch: 'main', url: 'https://github.com/Steve-ndeke/blue-green_poc.git'
+            }
+        }
+        stage('Check and Install kubectl') {
+            steps {
+                script {
+                    def kubectlExists = bat(script: 'which kubectl', returnStatus: true) == 0
+
+                    if (kubectlExists) {
+                        echo "kubectl is already installed."
+                    } else {
+                        echo "kubectl not found. Installing..."
+                        bat '''
+                        mkdir %KUBECTL_INSTALL_DIR%
+                        curl -LO "https://dl.k8s.io/release/%cd%/kubectl.exe"
+                        move kubectl.exe %KUBECTL_INSTALL_DIR%\\kubectl.exe
+                        set PATH=%KUBECTL_INSTALL_DIR%;%PATH%
+                        '''
+                        echo "kubectl installed successfully."
+                    }
+                }
+            }
+        }
 
 
         stage('Test Kubernetes Access') {
